BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/CRM_LinkedNDG__c.object-meta.xml
<CustomObject>
    <label>NDG collegati</label>
    <nameField>
        <displayFormat>NDGCollegati-{0000000000}</displayFormat>
        <label>Nome NDG collegati</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NDG collegati</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>