BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_Account__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NDG collegati</relationshipLabel>
    <relationshipName>NDG_collegati</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>