BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_AccountNDG__c.field-meta.xml
<CustomField>
    <fullName>CRM_AccountNDG__c</fullName>
    <formula>CRM_Account__r.CRM_NDG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account NDG</label>
    <type>Text</type>
</CustomField>