BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_CheckCodiceAltriColl__c.field-meta.xml
<CustomField>
    <fullName>CRM_CheckCodiceAltriColl__c</fullName>
    <formula>OR (
CRM_LinkCode__c =&apos;101&apos;,
CRM_LinkCode__c =&apos;114&apos;,
CRM_LinkCode__c =&apos;115&apos;,
CRM_LinkCode__c =&apos;118&apos;,
CRM_LinkCode__c =&apos;119&apos;,
CRM_LinkCode__c =&apos;120&apos;,
CRM_LinkCode__c =&apos;124&apos;,
CRM_LinkCode__c =&apos;125&apos;,
CRM_LinkCode__c =&apos;126&apos;,
CRM_LinkCode__c =&apos;127&apos;,
CRM_LinkCode__c =&apos;129&apos;,
CRM_LinkCode__c =&apos;130&apos;,
CRM_LinkCode__c =&apos;131&apos;,
CRM_LinkCode__c =&apos;132&apos;,
CRM_LinkCode__c =&apos;133&apos;,
CRM_LinkCode__c =&apos;136&apos;,
CRM_LinkCode__c =&apos;138&apos;,
CRM_LinkCode__c =&apos;140&apos;,
CRM_LinkCode__c =&apos;141&apos;,
CRM_LinkCode__c =&apos;142&apos;,
CRM_LinkCode__c =&apos;143&apos;,
CRM_LinkCode__c =&apos;144&apos;,
CRM_LinkCode__c =&apos;145&apos;,
CRM_LinkCode__c =&apos;146&apos;,
CRM_LinkCode__c =&apos;147&apos;,
CRM_LinkCode__c =&apos;148&apos;,
CRM_LinkCode__c =&apos;149&apos;,
CRM_LinkCode__c =&apos;151&apos;,
CRM_LinkCode__c =&apos;152&apos;,
CRM_LinkCode__c =&apos;153&apos;,
CRM_LinkCode__c =&apos;154&apos;,
CRM_LinkCode__c =&apos;155&apos;,
CRM_LinkCode__c =&apos;156&apos;,
CRM_LinkCode__c =&apos;157&apos;,
CRM_LinkCode__c =&apos;158&apos;,
CRM_LinkCode__c =&apos;159&apos;,
CRM_LinkCode__c =&apos;160&apos;,
CRM_LinkCode__c =&apos;161&apos;,
CRM_LinkCode__c =&apos;162&apos;,
CRM_LinkCode__c =&apos;163&apos;,
CRM_LinkCode__c =&apos;168&apos;,
CRM_LinkCode__c =&apos;169&apos;,
CRM_LinkCode__c =&apos;170&apos;,
CRM_LinkCode__c =&apos;171&apos;,
CRM_LinkCode__c =&apos;172&apos;,
CRM_LinkCode__c =&apos;173&apos;,
CRM_LinkCode__c =&apos;174&apos;,
CRM_LinkCode__c =&apos;175&apos;,
CRM_LinkCode__c =&apos;176&apos;,
CRM_LinkCode__c =&apos;177&apos;,
CRM_LinkCode__c =&apos;179&apos;,
CRM_LinkCode__c =&apos;180&apos;,
CRM_LinkCode__c =&apos;181&apos;,
CRM_LinkCode__c =&apos;182&apos;,
CRM_LinkCode__c =&apos;183&apos;,
CRM_LinkCode__c =&apos;184&apos;,
CRM_LinkCode__c =&apos;185&apos;,
CRM_LinkCode__c =&apos;186&apos;,
CRM_LinkCode__c =&apos;187&apos;,
CRM_LinkCode__c =&apos;199&apos;,
CRM_LinkCode__c =&apos;200&apos;,
CRM_LinkCode__c =&apos;265&apos;,
CRM_LinkCode__c =&apos;366&apos;,
CRM_LinkCode__c =&apos;365&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check codice altri collegamenti</label>
    <type>Checkbox</type>
</CustomField>