BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_EndDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_EndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End date</label>
    <type>Date</type>
</CustomField>