BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_LinkCode__c.field-meta.xml
<CustomField>
    <fullName>CRM_LinkCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Link Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>