BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_QuotaPartecipazione__c.field-meta.xml
<CustomField>
    <fullName>CRM_QuotaPartecipazione__c</fullName>
    <label>Quota partecipazione</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>