BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>CRM_RelatedAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NDG collegati (Related Account)</relationshipLabel>
    <relationshipName>CRM_LinkedNDG</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>