BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_RelatedAccountFiliale__c.field-meta.xml
<CustomField>
    <fullName>CRM_RelatedAccountFiliale__c</fullName>
    <formula>CRM_RelatedAccount__r.CRM_FormulaFiliale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filiale</label>
    <type>Text</type>
</CustomField>