BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_RelatedAccountFilialeName__c.field-meta.xml
<CustomField>
    <fullName>CRM_RelatedAccountFilialeName__c</fullName>
    <formula>CRM_RelatedAccount__r.PTF_Filiale__r.CRM_Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filiale NDG collegato</label>
    <type>Text</type>
</CustomField>