BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_RelatedAccountGruppoGestionale__c.field-meta.xml
<CustomField>
    <fullName>CRM_RelatedAccountGruppoGestionale__c</fullName>
    <formula>TEXT(CRM_RelatedAccount__r.PTF_GruppoGestionale__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gruppo Gestionale</label>
    <type>Text</type>
</CustomField>