BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_RelatedAccountMDS__c.field-meta.xml
<CustomField>
    <fullName>CRM_RelatedAccountMDS__c</fullName>
    <formula>TEXT(CRM_RelatedAccount__r.ModelloDiServizio__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MDS NDG collegato</label>
    <type>Text</type>
</CustomField>