BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_RelatedAccountNaturaGiuridica__c.field-meta.xml
<CustomField>
    <fullName>CRM_RelatedAccountNaturaGiuridica__c</fullName>
    <formula>CRM_RelatedAccount__r.CRM_NaturaGiuridica__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Natura Giuridica</label>
    <type>Text</type>
</CustomField>