BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_RelatedAccountNDG__c.field-meta.xml
<CustomField>
    <fullName>CRM_RelatedAccountNDG__c</fullName>
    <formula>CRM_RelatedAccount__r.CRM_NDG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Account NDG</label>
    <type>Text</type>
</CustomField>