BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_RelatedAccountPortafoglio__c.field-meta.xml
<CustomField>
    <fullName>CRM_RelatedAccountPortafoglio__c</fullName>
    <formula>CRM_RelatedAccount__r.PTF_Portafoglio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portafoglio</label>
    <type>Text</type>
</CustomField>