BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_RelatedAccountPortafoglioName__c.field-meta.xml
<CustomField>
    <fullName>CRM_RelatedAccountPortafoglioName__c</fullName>
    <formula>CRM_RelatedAccount__r.PTF_Portafoglio__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portafoglio NDG collegato</label>
    <type>Text</type>
</CustomField>