BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_RelatedAccountStatoCRM__c.field-meta.xml
<CustomField>
    <fullName>CRM_RelatedAccountStatoCRM__c</fullName>
    <formula>CRM_RelatedAccount__r.PTF_StatoCRMFull__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stato CRM</label>
    <type>Text</type>
</CustomField>