BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_RelatedNDGManager__c.field-meta.xml
<CustomField>
    <fullName>CRM_RelatedNDGManager__c</fullName>
    <formula>CRM_RelatedAccount__r.CRM_ReferenceManager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referente NDG collegato</label>
    <type>Text</type>
</CustomField>