BPER/DEVF/force-app/main/default/objects/CRM_LinkedNDG__c/fields/CRM_Status__c.field-meta.xml
<CustomField>
    <fullName>CRM_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>